--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ chardet==3.0.4
 Django==3.0.8
 gunicorn==20.0.4
 idna==2.10
-mysqlclient==2.0.1
+#mysqlclient==2.0.1
 python-decouple==3.3
 pytz==2020.1
 requests==2.24.0
